<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/search_list_bg_color">
    
    <include layout="@layout/header_fragment"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_top"           
        android:paddingTop="5dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical">
            
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#555555" 
            android:textStyle="bold"
            android:layout_marginLeft="5dp"                    
            android:text="@string/update_your_status"/> 

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"                
            android:weightSum="1.0">
                
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:paddingTop="1dp"
                android:paddingRight="11dp"
                android:layout_weight=".85">

                <EditText
                    android:id="@+id/facebook_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/search_bar"
                    android:hint="@string/empty"
                    android:singleLine="true"
                    android:textColor="#CB0000"
                    android:textStyle="bold" 
                    android:includeFontPadding="true"
                    android:paddingRight="35dp"
                    android:paddingLeft="35dp" 
                    android:text="@string/whats_on_your_mind"/>
                    
            </FrameLayout>
                
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"                                        
                android:layout_weight=".15">
                  
              <ImageButton
                  android:id="@+id/facebook_status_post"
                  android:layout_width="40dip"
                  android:layout_height="40dip"
                  android:layout_gravity="top|center_horizontal"
                  android:background="@drawable/post_button"                
                  android:contentDescription="@string/empty" />
            
            </FrameLayout>
       </LinearLayout>       
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_friends_bg">
        
        <ImageView
            android:src="@drawable/search_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty"/>
        
       <EditText
            android:id="@+id/search_friends"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_friends_text_bg"
            android:hint="@string/empty"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" 
            android:includeFontPadding="true"
            android:text="@string/search_for_friends"/>        
        
    </LinearLayout>    

    <ListView
        android:id="@+id/friend_list"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/search_list_bg_color"        
        android:divider="@drawable/shadow"
        android:dividerHeight="2dip"
        android:listSelector="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:scrollbars="none" >
    </ListView>
</LinearLayout>